ball has class uwu

--- a/index.html
+++ b/index.html
@@ -9,20 +9,6 @@
         <!-- Main stylesheet -->
         <link rel="stylesheet" href="main_style.css">
 
-    </head>
-
-    <body>
-
-        <!-- Centered to page -->
-        <div class="center-container">
-            <!-- Circle -->
-            <div class="circle-container">
-
-                <img src="svg/circle-bg.svg">
-
-            </div>
-        </div>
-
         <!-- Include libraries -->
         <!-- Anime.js -->
         <script
@@ -38,6 +24,25 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
+
+    </head>
+
+    <body>
+
+        <!-- Centered to page -->
+        <div class="center-container">
+            <!-- Squared -->
+            <div class="center-square">
+
+                <img src="svg/circle-bg.svg" class="circle-bg">
+
+                <balls>
+                    <!-- <img src="svg/ball.svg" class="ball"> -->
+                </balls>
+
+            </div>
+        </div>
+
 
         <!-- Circle script -->
         <script src="poly.js"></script>
