migrate to p5 because it makes sense

--- a/index.html
+++ b/index.html
@@ -24,28 +24,22 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.min.js"
+            integrity="sha512-jLPBEs8Tcpbj4AlLISWG0l7MbuIqp1cFBilrsy0BhvNUa0BLB4wVQeoL+93OYOdENFPKLOgrzb1Nytn+5N5y7g=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
 
     </head>
 
     <body>
 
-        <!-- Centered to page -->
-        <div class="center-container">
-            <!-- Squared -->
-            <div class="center-square">
+        <!-- This will hold the p5 canvas -->
+        <main></main>
 
-                <img src="svg/circle-bg.svg" class="circle-bg">
-
-                <balls>
-                    <!-- <img src="svg/ball.svg" class="ball"> -->
-                </balls>
-
-            </div>
-        </div>
-
-
-        <!-- Circle script -->
-        <script src="poly.js"></script>
+        <!-- Main script -->
+        <script src="main.js"></script>
 
     </body>
 
