--- a/index.html
+++ b/index.html
@@ -10,26 +10,8 @@
         <link rel="stylesheet" href="main_style.css">
 
         <!-- Include libraries -->
-        <!-- Anime.js -->
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"
-            integrity="sha512-aNMyYYxdIxIaot0Y1/PLuEu3eipGCmsEUBrUq+7aVyPGMFH8z0eTP0tkqAvv34fzN6z+201d3T8HPb1svWSKHQ=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
-        <!-- Tone.js -->
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.min.js"
-            integrity="sha512-Siyxh4gyNM5SaERNa9BOZSPcu/auHyFUWn9OVFD7MxI3/dVPQklE7tfqS+pLmPHF1zo6UdDaJAp/thihrf0c7w=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.min.js"
-            integrity="sha512-jLPBEs8Tcpbj4AlLISWG0l7MbuIqp1cFBilrsy0BhvNUa0BLB4wVQeoL+93OYOdENFPKLOgrzb1Nytn+5N5y7g=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
+        <script src = "https://cdn.jsdelivr.net/npm/tone@14.7.77/build/Tone.min.js"></script>
+        <script src = "https://cdn.jsdelivr.net/npm/p5@1.9.1/lib/p5.min.js"></script>
 
     </head>
 
