remove everything bc it sucks

--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!doctype html>
 <html>
-
     <head>
 
         <!-- Window title & metadata -->
-        <title>Official 🐈 webpage</title>
+        <title>Cat2 in bio</title>
 
         <!-- Main stylesheet -->
         <link rel="stylesheet" href="main_style.css">
 
+        <!-- Libraries -->
+        <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.2/lib/anime.min.js"></script>
+
     </head>
-
     <body>
+        <div class="scrollzone">
 
-        <!-- Main script -->
-        <script src="main.js"></script>
+            <div class="page-divider centerer" style="background-color: var(--red);">
+                <div class="face-square" style="outline-color: var(--black); background-color: var(--white);"></div>
+            </div>
+
+            <div class="page-divider centerer" style="background-color: var(--black);">
+                <div class="face-square" style="outline-color: var(--white); background-color: var(--black);"></div>
+            </div>
+
+        </div>
 
     </body>
-
 </html>
